--- a/GalacticEngine.vcxproj
+++ b/GalacticEngine.vcxproj
@@ -26,14 +26,14 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <PreferredToolArchitecture>x64</PreferredToolArchitecture>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <PreferredToolArchitecture>x64</PreferredToolArchitecture>
@@ -236,6 +236,7 @@
     <ClInclude Include="Inc\Scene\IStarSystem.hpp" />
     <ClInclude Include="Inc\Scene\SimpleStarSystem.hpp" />
     <ClInclude Include="Inc\StepTimer.h" />
+    <ClInclude Include="Inc\Utils\Json.hpp" />
     <ClInclude Include="Inc\Utils\PlanetGenerator.hpp" />
     <ClInclude Include="Inc\Utils\Random.hpp" />
     <ClInclude Include="Inc\Utils\Shapes.hpp" />
